--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "serverless-offline": "^5.3.3"
   },
   "dependencies": {
+    "aws-api-gateway-cli-test": "^1.3.2",
     "stripe": "^7.14.0",
     "uuid": "^3.3.3"
   },
