--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "aws-api-gateway-cli-test": "^1.3.2",
+    "aws-xray-sdk": "^2.5.0",
     "stripe": "^7.14.0",
     "uuid": "^3.3.3"
   },
