--- a/serverless.yml
+++ b/serverless.yml
@@ -1,7 +1,7 @@
 org: boxabirds
 app: notamelo
 # NOTE: update this with your service name
-service: notes-app-api
+service: notes-app-2-api
 
 # Create an optimized package for our functions 
 package:
@@ -19,11 +19,13 @@ custom:
     caching: true         # caching not recommended in development
     stats: true           # see the WebPack output
     linting: false        # Disable linting as a part of the build process
+  stage: ${opt:stage, self:provider.stage}
+  tableName: ${self:custom.stage}-notes
 
 provider:
   name: aws
   runtime: nodejs10.x
-  stage: prod
+  stage: dev
   region: us-east-1
   # To load environment variables externally
   # rename env.example to .env and uncomment
@@ -32,10 +34,14 @@ provider:
   #
   #environment:
   #  sampleEnvVar: ${env:SAMPLE_ENV_VAR}
+
+  tracing:
+    apiGateway: true
+    lambda: true
+
   environment:
     # access via process.env Node.js variable
-    tableName: notes
-
+    tableName: ${self:custom.tableName}
     stripeSecretKey: ${env:STRIPE_SECRET_KEY}
 
   iamRoleStatements:
@@ -48,9 +54,12 @@ provider:
         - dynamodb:PutItem
         - dynamodb:UpdateItem
         - dynamodb:DeleteItem
+        - xray:PutTraceSegments
+        - xray:PutTelemetryRecords
       # TODO reduce scope so it only accesses our db
       # after this is tested, change it to arn:aws:dynamodb:us-east-1:968984012907:table/notes
-      Resource: "arn:aws:dynamodb:us-east-1:*:*"
+      Resource: 
+        - "Fn::GetAtt": [ NotesTable, Arn ]
 
 functions:
   create:
@@ -121,3 +130,7 @@ functions:
           authorizer: aws_iam
 resources:
   - ${file(resources/api-gateway-errors.yml)}
+  - ${file(resources/dynamodb-table.yml)}
+  - ${file(resources/s3-bucket.yml)}
+  - ${file(resources/cognito-user-pool.yml)}
+  - ${file(resources/cognito-identity-pool.yml)}
